--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.6.3",
     "axios": "^0.20.0",
     "google-maps-react": "^2.0.6",
+    "randomcolor": "^0.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
