--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-uuid": "^1.0.2",
     "topojson-client": "^3.1.0",
     "typeface-roboto": "0.0.75"
   },
